<resources>
    <string name="app_name">Cozy Cups Cafe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logo">logo</string>
    <string name="cozy_cups_cafe">Cozy Cups Cafe</string>
    <string name="sanctuary_for_sips_and_serenity">Sanctuary for Sips and Serenity</string>
    <string name="background_image">background_image</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register2">Register</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="register3">Register</string>
    <string name="sign_in2">Sign in</string>
</resources>