<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@drawable/playlistbg4"
    tools:context=".RegisterActivity"
    >


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:text="@string/cozy_cups_cafe"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />





        <EditText
            android:id="@+id/editText4"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxWidth="488dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:drawablePadding="13dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintWidth_percent=".8"
            android:drawableStart="@drawable/baseline_email_24"
            android:backgroundTint="#CCCCCC"
            android:inputType="text"
            android:autofillHints="fullName"
            />


        <EditText
            android:id="@+id/editText5"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:maxWidth="488dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:drawablePadding="13dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText4"
            app:layout_constraintWidth_percent=".8"
            android:drawableStart="@drawable/baseline_key_24"
            android:backgroundTint="#CCCCCC"
            android:inputType="text"
            android:autofillHints="fullName"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/sign_in2"
            android:textAllCaps="false"
            android:textColor="@color/ironstone"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintVertical_bias=".55"
            app:layout_constraintWidth_percent=".8"
            android:background="@drawable/btn_bg_design" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/iron"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView

            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.72"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.49" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>